Added "find all paths" function and "sort all files by name" function