@@ -1,15 +1,30 @@
 package tasks;
 
+import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.List;
+import java.util.stream.Collectors;
 
 public class One {
-    private Path path;
 
-    public One(String path){
-        this.path = Path.of(path);
+    public void run(String path){
+        try {
+            List<Path> allFilePaths = Files.walk(Paths.get(path))
+                    .filter(Files::isRegularFile)
+                    .collect(Collectors.toList());
+            sortFiles(allFilePaths);
+        }catch(IOException ex){
+            ex.printStackTrace();
+        }
     }
+    private void sortFiles(List<Path> listPaths){
+        listPaths = listPaths
+                .stream()
+                .sorted()
+                .collect(Collectors.toList());
 
-    public void run(){
-        System.out.println("Hello world");
+        listPaths.forEach(p -> System.out.println(p.getFileName()));
     }
 }
